--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
 eclipse.preferences.version=1
+encoding//assocr/migrations/0001_initial.py=utf-8
+encoding//assocr/migrations/0002_uf.py=utf-8
+encoding//assocr/migrations/0003_auto_20150227_1307.py=utf-8
+encoding//assocr/migrations/0004_auto_20150227_1309.py=utf-8
 encoding//assocr/migrations/0005_member.py=utf-8
 encoding//assocr/migrations/0006_auto_20150228_1958.py=utf-8
